--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<link rel="shortcut icon" type="image/x-icon" href="logo.png"/>
+<!DOCTYPE html>
+<link rel="shortcut icon" type="image/x-icon" href="img/logo.png"/>
