--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-/opt/shiny-server/samples/welcome.html
+<!DOCTYPE html>
+
+<head>
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
+</head>
